<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntentsPlaygroundActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".IntentsPlaygroundActivity">

        <!-- Explicit intent heading -->
        <TextView
            android:id="@+id/explicit_intent_heading"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/explicit_intent_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Explicit intent button -->
        <Button
            android:id="@+id/open_main_activity_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="openMainActivity"
            android:text="@string/open_main_activity_button_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/explicit_intent_heading" />

        <!-- Divider -->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/open_main_activity_button" />

        <!-- Implicit intent heading -->
        <TextView
            android:id="@+id/implicit_intent_heading"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/implicit_intent_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <!-- Data input text field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="Data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/implicit_intent_heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- radio group for the intent type -->
        <RadioGroup
            android:id="@+id/intent_type_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/data">

            <RadioButton
                android:id="@+id/open_wepage_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Open Webpage" />

            <RadioButton
                android:id="@+id/dial_number_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dial Number" />

            <RadioButton
                android:id="@+id/share_text_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Share Text" />
        </RadioGroup>

        <!-- implicit intent button -->
        <Button
            android:id="@+id/send_implicit_intent_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="sendImplicitIntent"
            android:text="GO"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/intent_type_radio_group" />

        <!-- Divider -->
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/divider_color"
            app:layout_constraintTop_toBottomOf="@id/send_implicit_intent_button" />

        <!-- Send and receive data heading -->
        <TextView
            android:id="@+id/send_data_heading"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="sending and receiving data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

        <!-- Initial count input text field -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/initialCounterEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:hint="Data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/send_data_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_data_heading">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- send count button -->
        <Button
            android:id="@+id/send_data_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:onClick="sendData"
            android:text="send"
            app:layout_constraintBottom_toBottomOf="@+id/initialCounterEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/initialCounterEditText" />

        <!-- showing the result which is coming from the result activity generated which is initially gone -->
        <TextView
            android:id="@+id/result"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="TextView"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/initialCounterEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>